--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node src/server.js",
     "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli",
+    "migration:run": "npm run typeorm:cli -- migration:run",
+    "migration:create": "npm run typeorm:cli -- migration:create -n"
   },
   "repository": {
     "type": "git",
@@ -19,11 +22,16 @@
   },
   "homepage": "https://github.com/giovannabadaro/wish-list#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/uuid": "^8.3.1",
+    "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.9.2",
+    "@types/node": "^16.9.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
