--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
   "dependencies": {
     "@types/uuid": "^8.3.1",
     "express": "^4.17.1",
+    "multer": "^1.4.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.37"
+    "tsyringe": "^4.6.0",
+    "typeorm": "^0.2.37",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.9.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
